Node Wrangler: Lazy connect to Multi-input multiple times duplicates noodle #88807

Closed
opened 2021-06-03 18:29:06 +02:00 by Abir Dutta · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.27

Blender Version
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: blender/blender@84da05a8b8
Worked: none

Short description of error
Lazy connecting to multi-input socket makes new noodle even if one already exists. Removing extra noodle crashes Blender

Exact steps for others to reproduce the error
Add any node with geometry or string ouput, lazy connect to Join Geometry or Attriute remove node multiple times. Removing connection crashes Blender
image.png
LazyConnectMultiInput.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.27 **Blender Version** Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: `blender/blender@84da05a8b8` Worked: none **Short description of error** Lazy connecting to multi-input socket makes new noodle even if one already exists. Removing extra noodle crashes Blender **Exact steps for others to reproduce the error** Add any node with geometry or string ouput, lazy connect to Join Geometry or Attriute remove node multiple times. Removing connection crashes Blender ![image.png](https://archive.blender.org/developer/F10156219/image.png) [LazyConnectMultiInput.blend](https://archive.blender.org/developer/F10156224/LazyConnectMultiInput.blend)
Author

Added subscriber: @Xeofrios

Added subscriber: @Xeofrios
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Can confirm.
Jacques Lucke self-assigned this 2021-06-10 17:01:51 +02:00

This issue was referenced by blender/blender@1fa73076ca

This issue was referenced by blender/blender@1fa73076ca26df2a0b5e6aca7816263d68f837a3

This issue was referenced by blender/blender@03544ed54f

This issue was referenced by blender/blender@03544ed54f8dc5fb28d2c6b655a4153286c0137f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#88807
No description provided.